tests/baselines/reference/parserGreaterThanTokenAmbiguity4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity4.ts (2 errors) ====
    1 >
    ~~~
    > 2;
    ~
!!! error TS1109: Expression expected.
    ~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.